# headsail-pac

./: .gitignore  Cargo.toml  README.md  headsail-sysctrl.svd  jenga.lines  update.sh
headsail-sysctrl-pac/: Cargo.toml  README.md  headsail-sysctrl.svd  update.sh
headsail-sysctrl-pac/patches/: headsail.yaml
headsail-sysctrl-pac/src/: apb_gpio.rs  apb_i2c.rs  apb_pad_conf.rs  apb_pad_conf_reg_array.rs  apb_spim1.rs  apb_sw_irq.rs  apb_uart0.rs  apb_uart1.rs  c2c_config.rs  c2c_parallel.rs  c2c_serial.rs  dla.rs  dma0.rs  dma1.rs  dsp.rs  eth_ss_pad_conf.rs  eth_sspad_conf.rs  generic.rs  hpc.rs  lib.rs  mdio_map0.rs  mdio_map1.rs  sdram_cfg.rs  sysctrl.rs
headsail-sysctrl-pac/src/apb_gpio/: address_block.rs  inten.rs  intstatus.rs  padcfg0.rs  padcfg7.rs  padin.rs  powerevent.rs
headsail-sysctrl-pac/src/apb_i2c/: clk_prescaler.rs  cmd.rs  ctrl.rs  registers.rs  tx.rs
headsail-sysctrl-pac/src/apb_pad_conf/: cpi_clk.rs  cpi_data.rs  cpi_hsync.rs  cpi_vsync.rs  dma_event.rs  gpio0.rs  gpio10.rs  gpio11.rs  gpio12.rs  gpio13.rs  gpio14.rs  gpio15.rs  gpio16.rs  gpio17.rs  gpio18.rs  gpio19.rs  gpio21.rs  gpio23.rs  gpio24.rs  gpio25.rs  gpio27.rs  gpio28.rs  gpio3.rs  gpio4.rs  gpio5.rs  gpio7.rs  gpio9.rs  i2c_sda.rs  int_ack.rs  pad_mux0.rs  pad_mux1.rs  pad_mux3.rs  sdio_sddata0.rs  sdio_sddata1.rs  sdio_sddata2.rs  sdio_sddata3.rs  spim0_clk.rs  spim0_sdio0.rs  spim0_sdio1.rs  spim0_sdio3.rs  (+21 more)
headsail-sysctrl-pac/src/apb_pad_conf_reg_array/: registers.rs
headsail-sysctrl-pac/src/apb_spim0/: intsta.rs  spiadr.rs  spilen.rs  txfifo.rs
headsail-sysctrl-pac/src/apb_spim1/: intcfg.rs  registers.rs  spilen.rs
headsail-sysctrl-pac/src/apb_sw_irq/: apb_software_irq.rs  read.rs
headsail-sysctrl-pac/src/apb_uart0/: iir_fcr.rs  lsr.rs  rbr_thr_dll.rs  scr.rs
headsail-sysctrl-pac/src/apb_uart1/: mcr.rs  msr.rs  rbr_thr_dll.rs  registers.rs
headsail-sysctrl-pac/src/c2c_parallel/: id.rs  irq_en.rs  pad_c2c_config_1.rs  (+2 more)
headsail-sysctrl-pac/tests/: known_addresses_match.rs
(+1508 files in other folders)
